[package]
name = "ouroboros"
version = "0.1.0"
edition = "2024"

[dependencies]
pnet = "0.35.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tiny_http = "0.12.0"
urlencoding = "2.1.3"
ureq = "2.10"
chacha20poly1305 = "0.10"
rand = "0.8"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "ouroboros"
path = "src/bin/ouroboros.rs"
